Make Cards Rounded & Fix Clipping Bug

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,10 +1,18 @@
 // Cards Styling
-.card:hover {
-    box-shadow: -2px 8px 40px -12px rgba(0, 0, 0, 0.32);
-}
+$rounded-borders: 15px;
 
-.no-decoration {
-    text-decoration: none;
+.card {
+    border-radius: $rounded-borders;
+    text-decoration: none!important;
+    margin: 10px auto;
+
+    .card-img-top {
+        border-radius: $rounded-borders $rounded-borders 0 0;
+    }
+
+    &:hover {
+        box-shadow: -2px 8px 40px -12px rgba(0, 0, 0, .24);
+    }
 }
 
 
